--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   gtag('config', 'G-SZEB8FZ50H');
 </script>
+    <meta name="google-adsense-account" content="ca-pub-4420697642932182">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thomas Suen | Developer & Photographer</title>
