--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4420697642932182"
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SZEB8FZ50H"></script>
      crossorigin="anonymous"></script><script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
